--- a/assets/css/main.css
+++ b/assets/css/main.css
@@ -1,15 +1,56 @@
 
 /* Header - start*/
-.page-header {
 
+.header-sticky {
+    position: fixed;
+    top: 0;
+    right: 0;
+    left: 0;
+    background-color: #fff;
+    width: 100%;
+    height: 70px;
+    border-bottom: 1px solid #e6e6e6;
+    z-index: 99999999;
+    transition: all 0.3s ease;
+    animation: showStickyHeader linear 0.6s;
+
+}
+
+.header-sticky .primary-menu {
+    position: relative;
+    top: -48px;
+    text-align: center;
+    display: flex;
+    justify-content: center;
+}
+
+.header-sticky .header-icon {
+    font-size: 2.8rem;
+}
+
+
+
+@keyframes showStickyHeader {
+    from {
+        top: -50px;
+        opacity: 0;
+    }
+
+    to {
+        top: 0;
+        opacity: 1;
+    }
+}
+
+.header-sticky--flex {
+    display: flex;
+    flex-wrap: wrap;
 }
 
 .header-topbar {
-
-}
-
-.header-topbar__advertisement {
-
+    opacity: 1;
+    visibility: visible;
+    transition: all 0.3s ease;
 }
 
 .header-topbar__advertisement img{
@@ -95,63 +136,6 @@
     width: 145%;
 }
 
-.topbar-inner__link__language-currency:hover .topbar__switcher-language__drop-down {
-    opacity: 1;
-    visibility: visible;
-    animation: slideUp ease 0.4s;
-
-}
-
-.topbar__switcher-language__drop-down {
-    position: absolute;
-    background-color: var(--white-color);
-    z-index: 1;
-    padding-left: 0;
-    list-style: none;
-    min-width: 160px;
-    border: 1px solid #e6e6e6;
-    box-shadow: none;
-    margin: 10px 0;
-    top: 100%;
-    opacity: 0;
-    visibility: hidden;
-    /* animation: slideUp ease 0.4s; */
-    /* display: none; */
-}
-
-@keyframes slideUp {
-    from {
-        opacity: 0;
-        top: calc(100% + 20px);
-    }
-    to {
-        opacity: 1;
-        top: 100%;
-    }
-}
-
-.topbar__switcher-language__link:hover {
-    color: var(--primary-color);
-    -webkit-transition: all 0.3s ease;
-    -moz-transition: all 0.3s ease;
-    -ms-transition: all 0.3s ease;
-    transition: all 0.3s ease;
-}
-
-.topbar__switcher-language__item {
-    border-bottom: 1px solid #e6e6e6;
-}
-
-.topbar__switcher-language__link {
-    text-decoration: none;
-    font-size: 1.4rem;
-    color: #888;
-    display: block;
-    padding: 0.2rem 1.5rem;
-    line-height: 3.2rem;
-    width: 100%;
-}
-
 
 /* Header middle-bar */
 .header-middle__container {
@@ -195,6 +179,11 @@
 
 .search-field__control {
     flex: 1;
+}
+
+.header-search {
+    flex-grow: 1;
+    margin: 0 60px;
 }
 
 .header-search__search-key {
@@ -376,6 +365,7 @@
     display: flex;
     align-items: center;
     cursor: pointer;
+    -webkit-tap-highlight-color: transparent;
 }
 
 .header-action__cart {
@@ -611,7 +601,12 @@
 
 .vertical-menu__wrapper {
     margin: 0 !important;
+    transition: all 0.8s ease;
+    opacity: 1;
+    visibility: visible;
+
 }
+
 
 .vertical-menu-category {
     position: relative;
@@ -639,6 +634,7 @@
 
 
 .vertical-menu-category__list {
+    height: 472px;
     position: absolute;
     top: 100%;
     padding-left: 0;
@@ -646,8 +642,24 @@
     list-style: none;
     width: 100%;
     background-color: #252221;
+    opacity: 1;
+    visibility: visible;
     /* transition: all 1s ease-in-out; */
+    /* animation: slideUpVerticalMenu 3s ease */
+
 }
+
+/* @keyframes slideUpVerticalMenu {
+    from {
+        opacity: 1;
+        height: 472px;
+    }
+
+    to {
+        opacity: 0;
+        height: 0;
+    }
+} */
 
 .vertical-menu-category__link {
     position: relative;
@@ -777,6 +789,20 @@
     padding: 0 20px;
 }
 
+.primary-menu__item {
+    padding: 10px 0;
+    position: relative;
+}
+
+.primary-menu__item.menu-hover::after{
+    position: absolute;
+    content: "";
+    bottom: -10px;
+    left: 0;
+    height: 25px;
+    width: 100px;
+}
+
 .primary-menu__list {
     padding: 0;
     margin: 0;
@@ -824,6 +850,7 @@
     color: var(--text-color);
     cursor: pointer;
     display: none;
+    -webkit-tap-highlight-color: transparent;
 }
 
 .menu-icon:hover {
@@ -881,7 +908,7 @@
 /* Main content - start */
 
 /* Box-on-top */
-.page-main.container {
+.page-main {
     background-color: #eeeeee;
 }
 
@@ -1397,6 +1424,15 @@
     display: flex;
 }
 
+.banner-hori {
+    display: contents;
+}
+
+.group-product__banner-col__img img {
+    width: 100%;
+    height: 100%;
+}
+
 .group-product__item {
     display: flex;
 }
@@ -1768,4 +1804,29 @@
 .footer-bottom-mobile__link:hover {
     color: var(--primary-color);
     transition: all 0.3s ease;
+}
+
+#scroll-top {
+    position: fixed;
+    bottom: 10rem;
+    right: 3rem;
+    border: 2px solid #0d0d0d;
+    background-color: #fff;
+    width: 4rem;
+    height: 4rem;
+    font-size: 1.8rem;
+    display: flex;
+    align-items: center;
+    justify-content: center;
+    z-index: 999;
+    cursor: pointer;
+    transform: scale(0);
+    transition: all 0.3s ease;
+    /* display: none; */
+}
+
+#scroll-top.show-scroll-btn {
+    transform: scale(1);
+    /* display: block; */
+
 }
